@@ -1,3 +1,8 @@
+2012-11-05  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	* scribo/binarization/sauvola_ms.hh: Fix overlapping area
+	criterion.
+
 2012-09-10  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* scribo/binarization/sauvola_ms.hh: Add comments.
